src/objects/Apttus_Billing__CustomNumberingConfigurationSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Schema used to control the creation and maintenance of the various Custom Numbering Settings.</description>
    <fields>
        <fullName>Apttus_Billing__CustomNumberingEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable custom numbering.</description>
        <inlineHelpText>Checkbox to enable/disable custom numbering.</inlineHelpText>
        <label>Custom Numbering Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__DefaultEntryId__c</fullName>
        <description>ID of the Custom Numbering Entry that pertains to the default entry for the specified object type.</description>
        <inlineHelpText>ID of the Custom Numbering Entry that pertains to the default entry for the specified object type.</inlineHelpText>
        <label>Default Entry Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldFiveEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</description>
        <inlineHelpText>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</inlineHelpText>
        <label>Field Five Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldFourEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</description>
        <inlineHelpText>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</inlineHelpText>
        <label>Field Four Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldOneEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</description>
        <inlineHelpText>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</inlineHelpText>
        <label>Field One Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldThreeEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</description>
        <inlineHelpText>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</inlineHelpText>
        <label>Field Three Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldTwoEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</description>
        <inlineHelpText>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</inlineHelpText>
        <label>Field Two Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ObjectType__c</fullName>
        <description>Invoice, Credit Memo, Refund, Payment</description>
        <inlineHelpText>Invoice, Credit Memo, Refund, Payment</inlineHelpText>
        <label>Object Type</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Numbering Configuration Setting</label>
</CustomObject>